--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
     "react": "^16.14.0",
+    "react-addons-update": "^15.6.3",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^5.3.0",
+    "react-select": "^5.2.2",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.8",
