--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "babel-loader": "^8.2.3",
     "css-loader": "^4.3.0",
     "prop-types": "^15.8.0",
+    "qrcode.react": "^1.0.1",
     "react-app-polyfill": "^3.0.0",
+    "react-qr-reader": "^2.2.1",
+    "react-qrcode-logo": "^2.5.0",
     "sass-loader": "^10.1.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
@@ -36,6 +39,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
+    "qrcode.vue": "^3.3.3",
     "react": "^16.14.0",
     "react-addons-update": "^15.6.3",
     "react-bootstrap": "^2.1.0",
@@ -44,6 +48,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^5.3.0",
     "react-select": "^5.2.2",
+    "react.qrcode.generator": "^0.0.3",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.8",
