--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.8",
     "redux-thunk": "^2.4.1",
+    "regenerator-runtime": "^0.13.9",
     "style-loader": "^2.0.0"
   }
 }
